fix footer alignment

--- a/css/_style.css
+++ b/css/_style.css
@@ -715,15 +715,19 @@ ul.contact-address li i { margin-right: 10px; }
 .footer { 
 	background-color: #2d3035; 
 	height: 96px;
+	width: 100%;
 	margin: 0px;
+	display: table;
 }
 .footer a{ text-decoration: none; }
-.footer a img {
-	height:100%;
-	max-width:128px;
+.footer div { display: table-cell; }
+.footer div.mini-city a img {
+	height: 96px;
+	width:128px;
 	padding: 0px;
+	vertical-align: text-bottom;
 }
-#footer-header { padding: 30px 0px 0px 0px; }
+#footer-header { padding-top: 30px; }
 
 .page-header {
 	margin: 0 0 60px 0;
